--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "puppeteer": "^19.4.0",
     "sequelize": "^6.26.0",
     "uuid": "^9.0.0"
   },
